@@ -1,11 +1,14 @@
 2010-08-02  Jan Djärv  <jan.h.d@swipnet.se>
 
+	* xterm.c (x_create_toolkit_scroll_bar): Only set XtNbeNiceToColormap
+	to TRUE if depth of screen is < 16.
+
 	* gtkutil.c (hierarchy_ch_cb, qttip_cb): Do not define unless
 	USE_GTK_TOOLTIP.
 	(xg_prepare_tooltip): Return 0 unless USE_GTK_TOOLTIP
 	(xg_show_tooltip, xg_hide_tooltip): Do nothing unless
 	USE_GTK_TOOLTIP.
-	(xg_create_frame_widgets): Surrond tooltip-related code with ifdef
+	(xg_create_frame_widgets): Surround tooltip-related code with ifdef
 	USE_GTK_TOOLTIP.
 	(xg_free_frame_widgets): Don't delete ttip_* unless USE_GTK_TOOLTIP.
 
